--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(new_LlmPromptSettings)
 export(new_LlmResponse)
 import(shiny)
 
+importFrom(data.table,data.table)
+importFrom(data.table,rbindlist)
 importFrom(httr2,req_body_json)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
