classes for local llms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,16 @@ S3method(as_table,LlmResponse)
 S3method(print,LlmApi)
 S3method(print,LlmPromptSettings)
 S3method(print,LlmResponse)
+S3method(print,OllamaModel)
+S3method(print,OllamaModelManager)
+S3method(update,OllamaModelManager)
 export(as_table)
 export(new_LlmApi)
 export(new_LlmPromptSettings)
 export(new_LlmResponse)
+export(new_OllamaModel)
+export(new_OllamaModelManager)
+export(update)
 import(shiny)
 
 importFrom(data.table,data.table)
@@ -17,6 +23,9 @@ importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(ollamar,list_models)
+importFrom(ollamar,pull)
+importFrom(ollamar,test_connection)
 importFrom(shinyAce,aceEditor)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
