update message onAttach

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(data.table,rbindlist)
 importFrom(httr2,req_body_json)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_timeout)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(ollamar,list_models)
