add a new class LocalLlmApi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,21 @@
 S3method(as_table,LlmResponse)
 S3method(print,LlmPromptSettings)
 S3method(print,LlmResponse)
+S3method(print,LocalLlmApi)
 S3method(print,OllamaModel)
 S3method(print,OllamaModelManager)
 S3method(print,RemoteLlmApi)
+S3method(send_prompt,LocalLlmApi)
+S3method(send_prompt,RemoteLlmApi)
 S3method(update,OllamaModelManager)
 export(as_table)
 export(new_LlmPromptSettings)
 export(new_LlmResponse)
+export(new_LocalLlmApi)
 export(new_OllamaModel)
 export(new_OllamaModelManager)
 export(new_RemoteLlmApi)
+export(send_prompt)
 export(startApplication)
 export(update)
 import(shiny)
