shift generic methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(send_prompt,LocalLlmApi)
 S3method(send_prompt,RemoteLlmApi)
 S3method(update,OllamaModelManager)
 export(as_table)
+export(get_llm_models)
 export(new_LlmPromptSettings)
 export(new_LlmResponse)
 export(new_LocalLlmApi)
