--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 S3method(as_table,LlmResponse)
 S3method(get_llm_models,LocalLlmApi)
 S3method(get_llm_models,RemoteLlmApi)
-S3method(print,LlmPromptSettings)
+S3method(print,LlmPromptConfig)
 S3method(print,LlmResponse)
 S3method(print,LocalLlmApi)
 S3method(print,OllamaModel)
@@ -14,7 +14,7 @@ S3method(send_prompt,RemoteLlmApi)
 S3method(update,OllamaModelManager)
 export(as_table)
 export(get_llm_models)
-export(new_LlmPromptSettings)
+export(new_LlmPromptConfig)
 export(new_LlmResponse)
 export(new_LocalLlmApi)
 export(new_OllamaModel)
