--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ S3method(send_prompt,RemoteLlmApi)
 S3method(update,OllamaModelManager)
 export(as_table)
 export(get_llm_models)
+export(llm_generate_prompt_server)
+export(llm_generate_prompt_ui)
 export(new_LlmPromptConfig)
 export(new_LlmResponse)
 export(new_LocalLlmApi)
