--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     # build:
     #   context: .
     #   dockerfile: Dockerfile
-    image: ghcr.io/pandora-isomemo/llm-module:latest
+    image: ghcr.io/pandora-isomemo/llm-module:main
     container_name: shiny-llm-app
     ports:
       - "3838:3838"
