--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: llmModule
 Type: Package
 Title: R Interface for Large Language Model APIs
-Version: 25.06.0
+Version: 25.06.1
 Authors@R: c(
             person("Ricardo", "Fernandes", email = "ldv1452@gmail.com", role = c("aut", "cre")),
             person("Antonia", "Runge", email = "antonia.runge@inwt-statistics.de", role = c("aut"))
@@ -15,6 +15,7 @@ LazyData: true
 Depends: R (>= 3.5.0)
 Imports:
     data.table,
+    futile.logger,
     httr2,
     ollamar,
     shiny,
