--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,5 +41,6 @@ importFrom(ollamar,pull)
 importFrom(ollamar,test_connection)
 importFrom(shinyAce,aceEditor)
 importFrom(shinyAce,updateAceEditor)
+importFrom(shinyTools,shinyTryCatch)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
