llmModule 25.06.1: add options that are needed for integration into DataTools (#7)
* add options that are needed for integration into DataTools

* update news.md

* add tests

* fix message

* rename file

* fix output

* update messages

* align argument names

* fix test

* add shinyTryCatch

* update ReadMe

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: llmModule
 Type: Package
 Title: R Interface for Large Language Model APIs
-Version: 25.06.0
+Version: 25.06.1
 Authors@R: c(
             person("Ricardo", "Fernandes", email = "ldv1452@gmail.com", role = c("aut", "cre")),
             person("Antonia", "Runge", email = "antonia.runge@inwt-statistics.de", role = c("aut"))
@@ -15,11 +15,13 @@ LazyData: true
 Depends: R (>= 3.5.0)
 Imports:
     data.table,
+    futile.logger,
     httr2,
     ollamar,
     shiny,
     shinyAce,
-    shinyjs
+    shinyjs,
+    shinyTools
 Suggests:
     lintr (>= 1.0.2),
     testthat (>= 2.0.0),
