--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(send_prompt,RemoteLlmApi)
 S3method(update,OllamaModelManager)
 export(as_table)
 export(get_llm_models)
+export(has_internet)
 export(llm_generate_prompt_server)
 export(llm_generate_prompt_ui)
 export(new_LlmPromptConfig)
@@ -39,5 +40,7 @@ importFrom(ollamar,list_models)
 importFrom(ollamar,pull)
 importFrom(ollamar,test_connection)
 importFrom(shinyAce,aceEditor)
+importFrom(shinyAce,updateAceEditor)
+importFrom(shinyTools,shinyTryCatch)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
