fix RCMD Check - add || to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(httr2,req_perform)
 importFrom(httr2,req_timeout)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(rlang,"%||%")
 importFrom(shinyAce,aceEditor)
 importFrom(shinyAce,updateAceEditor)
 importFrom(shinyTools,shinyTryCatch)
