--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
     data.table,
     futile.logger,
     httr2,
+    rlang,
     shiny,
     shinyAce,
     shinyjs,
@@ -29,6 +30,6 @@ Suggests:
     rmarkdown
 Remotes:
     ollamar=hauselin/ollama-r@v1.2.2
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 URL: https://pandora-isomemo.github.io/llmModule/
